# slideshow-generator

./: README.md  picture_photo_image_icon_131252.icns  pyproject.toml  requirements.txt  run.sh
src/: main.py
src/audio/: mixer.py
src/export/: exporter.py
src/models/: project.py  serialization.py
src/rendering/: preview.py  renderer.py
src/ui/: export_dialog.py  main_window.py  scrubbable_spinbox.py
src/utils/: face_detection.py  media_import.py
